# the-circle

./: .gitignore  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  PHASE_2_COMPLETE.md  PHASE_2_STATUS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_messaging_schema.sql  002_phase2_messaging_vaults.sql  003_phase3_security_governance.sql  004_phase4_ai_analytics.sql
backend/src/: config.rs  main.rs
backend/src/handlers/: auth.rs  health.rs  messaging.rs  mod.rs  vault.rs
backend/src/models/: communication.rs  files.rs  membership.rs  messaging.rs  mod.rs  security.rs  session.rs  user.rs
backend/src/services/: ai_admin.rs  ai_content_analyzer.rs  auth.rs  cleanup.rs  encryption.rs  governance.rs  messaging.rs  mod.rs  multisig.rs  nlp_processor.rs  rbac.rs  recommendation_engine.rs  security.rs  threat_detection.rs  threat_predictor.rs  vault.rs  websocket.rs
backend/src/utils/: mod.rs
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/common/: ActivityLogs.tsx  MemberStatus.tsx
frontend/src/components/landing/: Hero.tsx  (+1 more)
frontend/src/pages/: AnalyticsDashboard.tsx  Dashboard.tsx  GovernancePage.tsx  Landing.tsx  Login.tsx  Messaging.tsx  Register.tsx  VaultPage.tsx
frontend/src/services/: api.ts  encryption.ts  vault.ts  webrtc.ts  websocket.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: destruction.ts
(+6 files in other folders)
