[package]
name = "the-circle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate", "ipnetwork", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
ring = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Base64 encoding
base64 = { version = "0.21", features = ["std"] }

# Decimal for currency
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
bigdecimal = "0.4"

# Random number generation
rand = "0.8"

# IP network handling
ipnetwork = "0.20"

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"

# AWS SDK
aws-config = "0.57"
aws-sdk-s3 = "0.36"

# Time and scheduling
tokio-cron-scheduler = "0.9"

[dev-dependencies]
tokio-test = "0.4"